force-app/main/default/objects/Consumer_Participation_Form__c/Consumer_Participation_Form__c.object-meta.xml
<CustomObject>
    <label>Consumer Participation Form</label>
    <nameField>
        <displayFormat>CPF-{0000}</displayFormat>
        <label>Consumer Participation Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Consumer Participation Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>