force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Address__c.field-meta.xml
<CustomField>
    <fullName>CPF_Address__c</fullName>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>