force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Apt_Floor__c.field-meta.xml
<CustomField>
    <fullName>CPF_Apt_Floor__c</fullName>
    <label>Apt/Floor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>