force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Associated_IDs__c.field-meta.xml
<CustomField>
    <fullName>CPF_Associated_IDs__c</fullName>
    <label>Associated IDs</label>
    <length>50</length>
    <type>Text</type>
</CustomField>