force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_City__c.field-meta.xml
<CustomField>
    <fullName>CPF_City__c</fullName>
    <label>City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>