force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>CPF_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>