force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Email__c.field-meta.xml
<CustomField>
    <fullName>CPF_Email__c</fullName>
    <label>Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>