force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Emergency_Contact_Primary_Name__c.field-meta.xml
<CustomField>
    <fullName>CPF_Emergency_Contact_Primary_Name__c</fullName>
    <label>Emergency Contact Primary Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>