force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Emergency_Contact_Primary_Telephone__c.field-meta.xml
<CustomField>
    <fullName>CPF_Emergency_Contact_Primary_Telephone__c</fullName>
    <label>Emergency Contact Primary Telephone</label>
    <type>Phone</type>
</CustomField>