force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Ethnicity__c.field-meta.xml
<CustomField>
    <fullName>CPF_Ethnicity__c</fullName>
    <label>Ethnicity</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Armenian</fullName>
            </value>
            <value>
                <fullName>Asian Indian</fullName>
            </value>
            <value>
                <fullName>Chicano</fullName>
            </value>
            <value>
                <fullName>Chinese</fullName>
            </value>
            <value>
                <fullName>Cuban</fullName>
            </value>
            <value>
                <fullName>Filipino</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Mexican</fullName>
            </value>
            <value>
                <fullName>Native Hawaiian or Other Pacific Islander</fullName>
            </value>
            <value>
                <fullName>Other Asian</fullName>
            </value>
            <value>
                <fullName>Other Ethnicity</fullName>
            </value>
            <value>
                <fullName>Other Hispanic Latino or Spanish</fullName>
            </value>
            <value>
                <fullName>Puerto Rican</fullName>
            </value>
            <value>
                <fullName>Vietnamese</fullName>
            </value>
            <value>
                <fullName>White (Nqon-Hispanic)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>