force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Has_Power_of_Attorney_POA__c.field-meta.xml
<CustomField>
    <fullName>CPF_Has_Power_of_Attorney_POA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Power of Attorney (POA):</label>
    <type>Checkbox</type>
</CustomField>