force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Help_us_save_paper_and_go_paperless__c.field-meta.xml
<CustomField>
    <fullName>CPF_Help_us_save_paper_and_go_paperless__c</fullName>
    <description>Opt in to receive your confirmation letter via email.</description>
    <inlineHelpText>Opt in to receive your confirmation letter via email.</inlineHelpText>
    <label>Help us save paper and go paperless!</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes, send my letter via email</fullName>
            </value>
            <value>
                <fullName>No, I want my letter mailed to me</fullName>
            </value>
            <value>
                <fullName>Decline to state</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>