force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_How_did_you_find_out_about_us__c.field-meta.xml
<CustomField>
    <fullName>CPF_How_did_you_find_out_about_us__c</fullName>
    <label>How did you find out about us?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employer/Consumer</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>SEIU ULTCW / Local 2015</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Health Plan/Insurance</fullName>
            </value>
            <value>
                <fullName>House Visit</fullName>
            </value>
            <value>
                <fullName>Community Presentation</fullName>
            </value>
            <value>
                <fullName>Media</fullName>
            </value>
            <value>
                <fullName>Letter</fullName>
            </value>
            <value>
                <fullName>Friend/Another Consumer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Friend/Another IHSS Caregiver</fullName>
            </value>
            <value>
                <fullName>Flyer</fullName>
            </value>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Presentation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>