force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_How_did_you_find_out_about_us_if__c.field-meta.xml
<CustomField>
    <fullName>CPF_How_did_you_find_out_about_us_if__c</fullName>
    <label>How did you find out about us (if other)</label>
    <type>TextArea</type>
</CustomField>