force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_IHSS_Pay_Stub_ID__c.field-meta.xml
<CustomField>
    <fullName>CPF_IHSS_Pay_Stub_ID__c</fullName>
    <label>IHSS Pay Stub ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>