force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>CPF_Last_Name__c</fullName>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>