force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Medi_Cal_ID__c.field-meta.xml
<CustomField>
    <fullName>CPF_Medi_Cal_ID__c</fullName>
    <label>Medi-Cal ID#</label>
    <length>50</length>
    <type>Text</type>
</CustomField>