force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Other_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>CPF_Other_Company_Name__c</fullName>
    <label>Other/Company Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>