force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Other_Phone__c.field-meta.xml
<CustomField>
    <fullName>CPF_Other_Phone__c</fullName>
    <label>Other Phone</label>
    <type>Phone</type>
</CustomField>