force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Primary_Phone__c.field-meta.xml
<CustomField>
    <fullName>CPF_Primary_Phone__c</fullName>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>