force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Staff_Only_Notes__c.field-meta.xml
<CustomField>
    <fullName>CPF_Staff_Only_Notes__c</fullName>
    <label>Staff Only Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>