force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Work_Phone__c.field-meta.xml
<CustomField>
    <fullName>CPF_Work_Phone__c</fullName>
    <label>Work Phone</label>
    <type>Phone</type>
</CustomField>