force-app/main/default/objects/Consumer_Participation_Form__c/fields/CPF_Zip__c.field-meta.xml
<CustomField>
    <fullName>CPF_Zip__c</fullName>
    <label>Zip</label>
    <length>50</length>
    <type>Text</type>
</CustomField>