force-app/main/default/objects/Consumer_Participation_Form__c/fields/Form_Language_Preference_Selected__c.field-meta.xml
<CustomField>
    <fullName>Form_Language_Preference_Selected__c</fullName>
    <label>Form Language Preference Selected</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Armenian</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>