force-app/main/default/objects/Consumer_Participation_Form__c/fields/Home_Care_Consumer__c.field-meta.xml
<CustomField>
    <fullName>Home_Care_Consumer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Home Care Consumer</label>
    <referenceTo>Home_Care_Seeker_Consumer__c</referenceTo>
    <relationshipLabel>Consumer Participation Forms</relationshipLabel>
    <relationshipName>Consumer_Participation_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>