force-app/main/default/objects/Consumer_Participation_Form__c/fields/If_Other_Ethnicity_please_indicate_yo__c.field-meta.xml
<CustomField>
    <fullName>If_Other_Ethnicity_please_indicate_yo__c</fullName>
    <description>Please indicate your Ethnicity</description>
    <inlineHelpText>Please indicate your Ethnicity</inlineHelpText>
    <label>If &apos;Other Ethnicity&apos;</label>
    <length>50</length>
    <type>Text</type>
</CustomField>